# wasm-worker

./: .eslintrc.json  .gitignore  .prettierrc.toml  .swcrc  Cargo.toml  README.md  eslint.config.mjs  module_support.rs  notes.md  package.json  webdriver.json
.cargo/: audit.toml  config.toml
.config/: topic.dic
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: audit.yml  coverage-documentation.yaml  documentation.yaml  documentation.yml  format.yaml  format.yml  lint.yaml  lint.yml  merge.yml  publish.yml  spellcheck.yml  test.yaml  test.yml
core/: Cargo.toml
core/examples/: basic.rs
core/src/: builder.rs  global.rs  lib.rs  script.js  script_url.rs  worklet.rs
core/src/dedicated/: builder.rs  mod.rs
core/tests/: no_module_support.rs  test.rs
examples/: audio_worklet.rs  basic.rs  example.rs  test.rs  testing.rs
minimal-versions/: Cargo.toml
src/: common.rs  compile_fail.rs  flag.rs  global.rs  lib.rs  lib_backup.rs  message.rs  message_handler.rs  registry.rs  try_catch.rs  web_worker.js  web_worker_closure.js  web_worker_fn.js  window_handler.rs  worker_url.rs  workers.rs  worklet.rs
src/dedicated/: builder.rs  common.rs  context.rs  event.rs  handle.rs  mod.rs  script_url.rs  url.rs  worker.js  worker.rs  worker_url.rs
src/message/: array_buffer.rs  audio_data.rs  conversion.rs  event.rs  handler.rs  has_support.rs  image_bitmap.rs  message_port.rs  mod.rs  offscreen_canvas.rs  raw.rs  readable_stream.rs  rtc_data_channel.rs  send.rs  transform_stream.rs  util.rs  video_frame.rs  writable_stream.rs
src/message/support/: array_buffer.rs  audio_data.rs  has_support.rs  image_bitmap.rs  message_port.rs  mod.rs  offscreen_canvas.rs  readable_stream.rs  rtc_data_channel.rs  support.rs  transform_stream.rs  video_frame.rs  writable_stream.rs
src/message/type/: array_buffer.rs  audio_data.rs  image_bitmap.rs  message_port.rs  mod.rs  offscreen_canvas.rs  readable_stream.rs  rtc_data_channel.rs  transform_stream.rs  video_frame.rs  writable_stream.rs
src/thread/: audio_worklet.rs  builder.rs  global.rs  js.rs  mod.rs  scope.rs  spawn.rs  unsupported.rs  util.rs  yield_now.rs
src/thread/atomics/: channel.rs  js.rs  main.rs  memory.rs  mod.rs  oneshot.rs  parker.rs  spawn.rs  url.rs  wait_async.js  wait_async.min.js  wait_async.rs  worker.js  worker_with_audio_worklet.js
src/thread/atomics/audio_worklet/: js.rs  main.rs  memory.rs  mod.rs  processor.rs  register.rs  worklet.js
src/thread/atomics/audio_worklet/register/: message.rs  mod.rs  worklet.js  worklet.min.js  worklet_with_message.js  worklet_with_message.min.js
src/thread/atomics/script/: package.json  wait_async.ts  wasm_bindgen_shim.d.ts  worker.ts  worker_with_audio_worklet.ts  worklet.ts  worklet_with_message.ts
src/thread/atomics/spawn/: message.rs  mod.rs  worker.js  worker.min.js  worker_with_audio_worklet.js  worker_with_audio_worklet.min.js
src/thread/unsupported/: audio_worklet.rs  js.rs  mod.rs  parker.rs
src/web/: audio_worklet.rs  message.rs  mod.rs
src/window/: message.rs  mod.rs  track.rs
src/worker/: builder.rs  context.rs  handle.rs  mod.rs  script.js  script.rs  support.rs  url.rs  worker.js  worker.rs
src/worklet/: context.rs  future.rs  handle.rs  mod.rs  module.rs  polyfill.js  polyfill.rs  support.rs  url.rs  worklet.js  worklet.rs
src/worklet/audio/: context.rs  mod.rs  module.rs  url.rs  worklet.js
src/worklet/builder/: future.rs  mod.rs
src/worklet/module/: future.rs  mod.rs  polyfill.js  polyfill.rs
src/worklet/url/: future.rs  mod.rs  support.rs  worklet.js
tests/: audio_worklet.rs  audio_worklet_fail.rs  audio_worklet_fail_async.rs  audio_worklet_message_success.rs  audio_worklet_success.rs  basic.rs  basic_dedicated.rs  basic_fail.rs  basic_main.rs  basic_service.rs  basic_shared.rs  basic_success.rs  basic_worker.rs  builder.rs  compile_test.rs  dedicated_fail.rs  dedicated_success.rs  destroy.rs  main_corrupt.rs  main_fail.rs  main_success.rs  message_handler.rs  message_success.rs  no_import_support.rs  no_module_support.rs  race_has_async_support.rs  race_has_image_bitmap_support.rs  race_image_bitmap.rs  race_image_bitmap_has_support.rs  race_message_has_support.rs  race_worklet_module_default.rs  race_worklet_module_has_support.rs  service_fail.rs  service_success.rs  shared_fail.rs  shared_success.rs  spawn.rs  supported_block.rs  supported_spawn.rs  supported_spawn_corrupt.rs  (+18 more)
tests/compile-fail/: scope_async_await.rs  scope_async_into_await.rs  scope_nested_async_await.rs
tests/util/: mod.rs
