[package]
categories = ["api-bindings", "concurrency", "wasm"]
description = "Drop-in replacement for std::thread for Wasm in browsers"
edition = "2021"
include = ["CHANGELOG.md", "LICENSE-*", "src/**/*", "examples/**/*"]
keywords = ["worker", "worklet", "wasm", "web", "thread"]
license = "MIT OR Apache-2.0"
name = "web-thread"
repository = "https://github.com/daxpedda/web-thread"
rust-version = "1.70"
version = "0.0.0"

[features]
audio-worklet = [
	"web-sys/AudioContextState",
	"web-sys/AudioWorklet",
	"web-sys/AudioWorkletGlobalScope",
	"web-sys/AudioWorkletNode",
	"web-sys/AudioWorkletNodeOptions",
	"web-sys/AudioWorkletProcessor",
	"web-sys/BaseAudioContext",
	"web-sys/DomException",
]

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = "0.3.68"
pin-project = "1"
wasm-bindgen = { version = "0.2.91", default-features = false }
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = [
	"AbortController",
	"AbortSignal",
	"DedicatedWorkerGlobalScope",
	"MessageChannel",
	"MessagePort",
	"Navigator",
	"SharedWorkerGlobalScope",
	"Window",
	"WorkerNavigator",
] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown", target_feature = "atomics"))'.dependencies]
atomic-waker = "1"
web-sys = { version = "0.3", features = [
	"Blob",
	"BlobPropertyBag",
	"Url",
	"Worker",
	"WorkerOptions",
	"WorkerType",
] }

[dev-dependencies]
static_assertions = "1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
pollster = { version = "0.3", features = ["macro"] }
ui_test = { git = "https://github.com/daxpedda/ui_test", branch = "web-thread" }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
async-channel = "2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
	"AudioContext",
	"Blob",
	"BlobPropertyBag",
	"console",
	"Url",
] }
web-time = "1"

[target.'cfg(all(target_family = "wasm", target_feature = "atomics"))'.dev-dependencies]
atomic-waker = "1"
futures-util = { version = "0.3", default-features = false }

[[example]]
doc-scrape-examples = true
name = "audio_worklet"
required-features = ["audio-worklet"]

[[test]]
name = "basic_fail"
path = "tests/basic_fail.rs"
test = false

[[test]]
name = "basic_success"
path = "tests/basic_success.rs"
test = false

[[test]]
name = "supported_spawn_success"
path = "tests/supported_spawn_success.rs"
test = false

[[test]]
name = "supported_spawn_fail"
path = "tests/supported_spawn_fail.rs"
test = false

[[test]]
name = "supported_block"
path = "tests/supported_block.rs"
test = false

[[test]]
name = "unsupported_spawn"
path = "tests/unsupported_spawn.rs"
test = false

[[test]]
name = "unsupported_block"
path = "tests/unsupported_block.rs"
test = false

[[test]]
name = "util"
path = "tests/util.rs"
test = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
targets = ["wasm32-unknown-unknown"]

[lints.rust]
# Rust groups.
future_incompatible = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
# Rust lints.
deprecated_in_future = "warn"
ffi_unwind_calls = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Clippy groups.
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Clippy restriction lints.
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_conversions = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
min_ident_chars = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
non_ascii_literal = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
# Allowed Clippy lints.
equatable_if_let = "allow"
explicit_deref_methods = "allow"
future_not_send = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
tabs_in_doc_comments = "allow"

[lints.rustdoc]
all = { level = "warn", priority = -1 }
