[package]
edition = "2021"
name = "wasm-worker-core"
publish = false
version = "0.0.0"

[features]
raw = []

[dependencies]
js-sys = "0.3"
once_cell = "1"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
	"Blob",
	"BlobPropertyBag",
	"console",
    "DedicatedWorkerGlobalScope",
	"Url",
    "Worker",
] }
