[package]
edition = "2021"
name = "wasm-worker-core"
publish = false
version = "0.0.0"

[dependencies]
js-sys = "0.3"
once_cell = "1"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
	"AudioData",
	"Blob",
	"BlobPropertyBag",
	"DedicatedWorkerGlobalScope",
	"ImageBitmap",
	"MessagePort",
	"OffscreenCanvas",
	"ReadableStream",
	"RtcDataChannel",
	"TransformStream",
	"Url",
	"VideoFrame",
	"Window",
	"Worker",
	"WorkerOptions",
	"WorkerType",
	"Worklet",
	"WritableStream",
] }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[[test]]
name = "no_module_support"
test = false
