[package]
edition = "2021"
name = "minimal-versions"
publish = false
version = "0.0.0"

[features]
audio-worklet = ["web-thread/audio-worklet"]
message = ["web-thread/message"]

[dependencies]
web-thread = { path = ".." }

[patch.crates-io]
js-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
wasm-bindgen = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
wasm-bindgen-futures = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
web-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
