[package]
edition = "2021"
name = "minimal-versions"
publish = false
version = "0.0.0"

[features]
audio-worklet = ["web-thread/audio-worklet"]
message = ["web-thread/message"]

[dependencies]
web-thread = { path = ".." }

[patch.crates-io]
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "d3872f17d3e6fbed19eef71a8056b904b5c0fb63" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "d3872f17d3e6fbed19eef71a8056b904b5c0fb63" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "d3872f17d3e6fbed19eef71a8056b904b5c0fb63" }
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "d3872f17d3e6fbed19eef71a8056b904b5c0fb63" }
